test/data/semantic-errors/type-mismatch-addition.ava
var anotherFunction = function () -> true + 2 end;